<resources>
    <string name="app_name">微网</string>
    <string name="app_title">欢迎登录微网</string>
    <!--  account security  -->
    <string name="account_security_title">微网账户安全</string>
    <string name="account_security_frozen">冻结账户</string>
    <string name="account_security_thaw">解冻账户</string>
    <string name="account_security_appeal">账户申诉</string>
    <string name="account_security_frozen_title">微网账户冻结</string>
    <string name="account_security_thaw_title">微网账户解冻</string>
    <string name="account_security_appeal_title">微网账户解封申诉</string>
    <string name="account_security_frozen_phone_hint">请输入手机号</string>
    <string name="account_security_frozen_name_hint">请输入姓名</string>
    <string name="account_security_frozen_id_card_hint">请输入身份证号</string>
    <string name="account_security_appeal_button">获取验证码解封账户</string>
    <string name="account_security_thaw_button">获取验证码解冻账户</string>

    <!--  Login & Register  -->
    <string name="register_explain">未注册的手机号验证后自动创建微网账号</string>
    <string name="input_telephone">请输入手机号</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="log_out">退出登录</string>
    <string name="safe_log_out">安全退出</string>
    <string name="switch_account">切换账号</string>
    <!--    <string name="register">同意并注册</string>-->
    <string name="account_register">账号注册</string>
    <string name="return_to_login">返回登录</string>
    <string name="agree_register">同意并注册</string>
    <string name="forget_password">找回密码</string>
    <string name="urgent_freeze">紧急冻结</string>
    <string name="more_options">更多选项</string>
    <string name="obtain_verify_code">获取短信验证码</string>
    <string name="verify_code_tips">验证码已发送至：%s</string>
    <string name="verify_code_count_down">%s秒后重新获取验证码</string>
    <string name="verify_code_retrieve">重新获取验证码</string>
    <string name="logout_title">微网安全退出</string>
    <string name="logout_msg">退出后不会删除任何数据，您可以再次登录使用。</string>

    <string name="register_read_text">我已阅读并同意《微网用户服务协议》、《隐私政策》、《中国移动认证服务条款》，并授权微网使用本页面收集的账号信息进行统一管理。</string>

    <string name="register_read_text_2">本页面收集的信息仅用于注册账号</string>
    <string name="license_server_protocol">微网用户协议</string>
    <string name="license_server_content">欢迎你使用ILIVE软件及服务！\n\n
为使用ILIVE软件（以下简称“本软件”）及服务，你应当阅读并遵守《ILIVE软件许可及服务协议》（以下简称“本协议”），以及《腾讯服务协议》 。请你务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款，以及开通或使用某项服务的单独协议，并选择接受或不接受。限制、免责条款可能以加粗等形式提示你注意。\n\n
除非你已阅读并接受本协议所有条款，否则你无权下载、安装或使用本软件及相关服务。你的下载、安装、使用、获取微信账号、登录等行为即视为你已阅读并同意上述协议的约束。\n\n
如果你未满18周岁，请在法定监护人的陪同下阅读本协议及上述其他协议，并特别注意未成年人使用条款。特别地，如果你是未满14周岁的儿童，则在完成账号注册前，还应请你的监护人仔细阅读腾讯公司专门制定的《儿童隐私保护声明》。只有在取得监护人对《儿童隐私保护声明》的同意后，未满14周岁的儿童方可使用微信服务。\n\n
一、协议的范围\n\n
1.1 协议适用主体范围\n\n
本协议是你与腾讯之间关于你下载、安装、使用、复制本
</string>

    <!--  main  -->
    <string name="tab_tag_message">消息</string>
    <string name="tab_tag_address_book">通讯录</string>
    <string name="tab_tag_ilive">ILive</string>
    <string name="tab_tag_service">服务</string>
    <string name="tab_tag_my">我的</string>

    <string name="main_title_setting">设置</string>
    <!--  setting  -->
    <string name="setting_item_title_account_safe">帐户安全</string>
    <string name="setting_item_title_phone">手机号</string>
    <string name="setting_item_title_logout">注销账号</string>

    <!--  user info  -->
    <string name="user_info_item_nick_name">昵称</string>
    <string name="user_info_item_account">账号</string>
    <string name="user_info_logout_dialog_cancel">取消</string>
    <string name="user_info_logout_dialog_exit">安全退出</string>
    <string name="user_info_logout_dialog_title">感谢您使用微网账户，欢迎下次登录！</string>

    <!--  toast text  -->
    <string name="toast_telephone_error">请输入合法的手机号</string>
    <string name="toast_read_server_clause">请阅读并同意服务条款</string>

    <!--  update user title  -->
    <string name="update_user_title_nick_name">昵称</string>
    <string name="update_user_title_account">账号</string>
    <string name="update_user_info_nick_name_title">微网昵称修改</string>
    <string name="update_user_info_nick_name_hint">请输入昵称</string>
    <string name="update_user_info_nick_name_limit_tips">昵称修改每个认证用户每年可修改2次</string>
    <string name="update_user_info_nick_name_limit">您今年还可修改%d次</string>
    <string name="update_user_info_not_modifiable">不可修改</string>
    <string name="update_user_info_commit">确认修改</string>

    <string name="update_user_info_account_title">微网账号修改</string>
    <string name="update_user_info_account_hint">请输入账号</string>

    <string name="update_user_info_phone_title">更换绑定手机号</string>
    <string name="update_user_info_phone_hint">请输入手机号</string>
    <string name="update_user_info_phone_tips_1">手机号为微网账户登录有效验证方式之一</string>
    <string name="update_user_info_phone_tips_2">更换后请牢记</string>
    <string name="update_user_info_phone_commit">确认更换电话号码</string>

    <string name="update_user_info_phone_confirm_title">更换绑定手机号</string>
    <string name="update_user_info_phone_confirm_tips">请您仔细核对并牢记更换后手机号码并再次确认</string>
    <string name="update_user_info_phone_confirm">确认更换</string>

    <!--  qr code card  -->
    <string name="qr_code_card_real_name_authentication_tips">实名认证添加好友</string>
    <string name="qr_code_card_real_name_tips">用户需准备有效期内二代身份证</string>
    <string name="qr_code_card_qr_code_tips">扫描上边二维码可发起会话聊天</string>

    <string name="update_user_info_update_avatar_title">用户头像修改</string>
    <string name="update_user_info_update_avatar_tips">头像不允许涉及政治敏感色情，谨守社交礼仪共建和谐</string>
    <string name="update_user_info_update_avatar_protocol_text">《微网用户头像文明使用规范》</string>
    <string name="update_user_info_update_avatar_protocol_title">微网用户头像文明使用规范</string>
    <string name="update_user_info_update_avatar_protocol_content">欢迎你使用微网软件及服务！</string>
    <string name="update_user_info_update_avatar_agree">同意并选择</string>

    <string name="update_user_info_update_avatar_text">更换新头像</string>
    <string name="update_user_info_save_text">保存到相册</string>
    <string name="update_user_info_back_text">返回上一页</string>

    <!--  real name authentication  -->
    <string name="real_name_authentication_msg">微网用户实名认证</string>
    <string name="real_name_authentication_tips">保护您的合法权益</string>
    <string name="real_name_authentication_tips2">用户需准备有效期内二代身份证</string>
    <string name="real_name_authentication_start">开始认证</string>
    <string name="real_name_authentication_title">用户实名认证</string>
    <string name="real_name_authentication_explain">微网用户凭身份证仅可完成一个账户实名认证</string>
    <string name="real_name_authentication_protocol">《微网用户实名认证服务协议》</string>
    <string name="real_name_authentication_agree">同意并认证</string>

    <!--  Toast  -->
    <string name="error_upload_failure">上传失败</string>
    <string name="error_update_phone">更新手机号失败</string>
    <string name="error_update_avatar">更新头像失败</string>
    <string name="save_picture_success">保存图片成功</string>
    <string name="save_picture_failure">图片保存失败</string>
    <string name="error_update_get_code_failure">获取验证码失败</string>
    <string name="error_update_nick_name_format">昵称格式有误</string>
    <string name="error_update_nick_name_failure">昵称修改失败</string>
    <string name="error_update_account_length">长度8~12位</string>
    <string name="error_update_account_failure">"修改账号失败"</string>
    <string name="error_update_account_format">"仅可输入数字和字母不区分大小写"</string>


</resources>