<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/login_register_text_color" />

    <View
        android:layout_width="1dp"
        android:layout_height="9dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/login_register_text_color" />

    <TextView
        android:id="@+id/tv_urgent_freeze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urgent_freeze"
        android:textColor="@color/login_register_text_color" />

    <View
        android:layout_width="1dp"
        android:layout_height="9dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/login_register_text_color" />

    <TextView
        android:id="@+id/tv_more_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_options"
        android:textColor="@color/login_register_text_color" />

</LinearLayout>