<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_80"
    tools:context=".ui.login.LoginFragment">

    <com.hhsj.ilive.widget.CustomFontTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_user_info_phone_title"
        android:textColor="@color/app_title_color"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textFont="Normal" />

    <ImageView
        android:id="@+id/iv_back"
        style="@style/TitleIcon"
        android:layout_marginStart="16dp"
        android:src="@mipmap/icon_go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.hhsj.ilive.widget.CustomFontEditText
        android:id="@+id/et_phone"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:background="@drawable/shape_round_rect_white"
        android:gravity="center"
        android:hint="@string/update_user_info_phone_hint"
        android:maxLines="1"
        android:maxLength="12"
        android:inputType="number"
        android:textColor="@color/text_verify_code_tips"
        android:textColorHint="@color/update_user_info_hint"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textFont="Normal" />

    <com.hhsj.ilive.widget.CustomFontTextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:text="@string/update_user_info_phone_tips_1"
        android:textColor="@color/register_login_edit_hint"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textFont="Light" />

    <com.hhsj.ilive.widget.CustomFontTextView
        android:id="@+id/tv_tips_limit"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:textColor="@color/register_login_edit_hint"
        android:textSize="13sp"
        android:layout_marginTop="12dp"
        android:text="@string/update_user_info_phone_tips_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tips"
        app:textFont="Light" />

    <com.hhsj.ilive.widget.CustomEnableTextView
        android:id="@+id/tv_frozen"
        style="@style/Login_Regis_Button_Style"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:text="@string/update_user_info_phone_commit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:textFont="Regular" />

</androidx.constraintlayout.widget.ConstraintLayout>