<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_fragment_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="30dp"
        android:text="@string/user_info_logout_dialog_title"
        android:textColor="@color/black_0"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_40"/>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/user_info_logout_dialog_exit"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/white_80"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/user_info_logout_dialog_cancel"
        android:textColor="@color/black_100"
        android:textSize="20sp" />

</LinearLayout>