<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/root_background"
    tools:context=".ui.login.LoginFragment">

    <com.hhsj.ilive.widget.CustomFontTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_user_info_update_avatar_title"
        android:textColor="@color/app_title_color"
        android:textSize="27sp"
        app:textFont="Normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:src="@mipmap/icon_logout"/>

    <com.hhsj.ilive.widget.CustomFontTextView
        android:id="@+id/tv_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:textFont="Light"
        android:text="@string/update_user_info_update_avatar_tips"
        android:textColor="@color/register_login_edit_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <LinearLayout
        android:id="@+id/bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@drawable/shape_dialog_fragment_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <com.hhsj.ilive.widget.CustomFontTextView
            android:id="@+id/tv_protocol"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/view_divider"
            android:text="@string/update_user_info_update_avatar_protocol_text"
            android:textColor="@color/round_rect_button_enable"
            android:textSize="14sp" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/white_40"
            app:layout_constraintTop_toBottomOf="@id/tv_logout"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.hhsj.ilive.widget.CustomFontTextView
            android:id="@+id/tv_agree"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_view"
            android:text="@string/user_info_logout_dialog_exit"
            android:textColor="@color/round_rect_button_enable"
            android:textSize="16sp" />

        <View
            android:id="@+id/bottom_view"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_cancel"
            android:background="@color/white_80"/>

        <com.hhsj.ilive.widget.CustomFontTextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:gravity="center"
            android:background="@color/white"
            android:text="@string/user_info_logout_dialog_cancel"
            android:textColor="@color/black_100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>